[metadata]
name = ctakes-pbj
version = 6.0.0-SNAPSHOT
author = Apache cTAKES
author_email = dev@ctakes.apache.org
description = Apache cTAKES Python Bridge to Java
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/apache/ctakes
project_urls =
    Bug Tracker = https://github.com/apache/ctakes/issues
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
package_dir=
    = src
packages = find:
python_requires = >=3.7, <3.9
install_requires =
    dkpro-cassis~=0.7.0
    stomp.py~=8.0.0

[options.packages.find]
where = src
