[metadata]
name = ctakes-pbj
version = 7.0.0
author = Apache cTAKES
author_email = dev@ctakes.apache.org
description = Apache cTAKES Python Bridge to Java
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/apache/ctakes
project_urls =
    Bug Tracker = https://github.com/apache/ctakes/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
package_dir=
    = src
packages = find:
python_requires = >=3.7
install_requires =
    dkpro-cassis~=0.9.1
    stomp-py~=8.1.2

[options.packages.find]
where = src
